--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "graphql": "^15.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
